# autodo-kit

./: .gitattributes  .gitignore  README.md  pyproject.toml  requirements.txt
autodokit/: __init__.py  api.py  main.py  path_compat.py
autodokit/affairs/: __init__.py
autodokit/tools/: __init__.py  a010_skill_bootstrap_runner.py  affair_entry_registry_tools.py  affair_result.py  aliyun_multimodal_postprocess_tools.py  aob_tools.py  aok_pdf_aliyun_multimodal_batch_manage.py  aok_pdf_aliyun_multimodal_parse.py  bib_online_retrieval_tool.py  (+58 more)
docs/: AOK预置事务手册.md  AOL与AOC设计说明.md  API.md  API手册.md  README.md  TOOLS.md  manual-Zotero双向对接基础操作指南-20260422-001.md  zotero-rdf-to-a020.md  产品需求文档.md  在线检索文献模块专题.md  开发日志.md  开发者指南.md  文献库迁移指南.md  用户手册.md  知识库迁移指南.md
tests/: test_a010_skill_bootstrap_runner.py  test_a040_retrieval_mode_contract.py  test_a040_seed_language_partition.py  test_a040_special_language_routing.py  test_aliyun_routing_minimal.py  test_aok_logdb.py  test_aok_pdf_aliyun_multimodal_parse.py  test_aok_triple_db_demo_affair.py  test_attachment_name_normalization_tools.py  test_autodokit_decoupled_runtime.py  test_bibliodb.py  test_bibliodb_sqlite_relations.py  test_git_snapshot_ledger.py  test_knowledgedb.py  test_llm_clients.py  test_monkeyocr_batch_affair.py  test_monkeyocr_manifest_runtime.py  test_monkeyocr_runner.py  test_obsidian_note_timezone_tools.py  test_online_retrieval_refactor_contract.py  test_open_access_browser_session.py  test_pandoc_word_to_latex_table_support.py  test_path_compat.py  test_pdf_multimodal_tree_builder.py  test_pdf_structured_element_extractor_from_babeldoc.py  test_pdf_to_structured_affair.py  test_project_initialization_affair.py  test_reference_citation_tools.py  test_remote_transfer.py  test_research_workflow_affairs.py  test_research_workflow_tools.py  test_review_reading_contract_tools.py  test_taskdb_aok.py  test_taskdb_aok_affairs.py  test_zotero_rdf_to_a020_incremental_import_tools.py
(+507 files in other folders)
